--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/TipoAF/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/TipoAF/Nuevo.cshtml
@@ -62,8 +62,8 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdCtaCble_Activo">Cuenta contable activo*</label>
-                    @Html.Partial("_CmbCuenta_TipoAF", Model.IdCtaCble_Activo)
+                    <label for="IdCtaCble_Activo">Cuenta contable activo</label>
+                    @Html.Partial("_CmbCuenta_TipoAF1", Model)
                     @Html.ValidationMessageFor(q => q.IdCtaCble_Activo, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -74,8 +74,8 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdCtaCble_Dep_Acum">Cuenta contable depreciación acumulada*</label>
-                    @Html.Partial("_CmbCuenta_TipoAF", Model.IdCtaCble_Dep_Acum)
+                    <label for="IdCtaCble_Dep_Acum">Cuenta contable depreciación acumulada</label>
+                    @Html.Partial("_CmbCuenta_TipoAF2", Model)
                     @Html.ValidationMessageFor(q => q.IdCtaCble_Dep_Acum, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -86,14 +86,54 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdCtaCble_Gastos_Depre">Cuenta contable gastos de depreciación*</label>
-                    @Html.Partial("_CmbCuenta_TipoAF", Model.IdCtaCble_Gastos_Depre)
+                    <label for="IdCtaCble_Gastos_Depre">Cuenta contable gastos de depreciación</label>
+                    @Html.Partial("_CmbCuenta_TipoAF3", Model)
                     @Html.ValidationMessageFor(q => q.IdCtaCble_Gastos_Depre, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
     </div>
-
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="IdCtaCble_CostoVenta">Cuenta contable costo de venta</label>
+                    @Html.Partial("_CmbCuenta_TipoAF4", Model)
+                    @Html.ValidationMessageFor(q => q.IdCtaCble_CostoVenta, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+    </div>    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="IdCtaCble_Mejora">Cuenta contable mejora</label>
+                    @Html.Partial("_CmbCuenta_TipoAF5", Model)
+                    @Html.ValidationMessageFor(q => q.IdCtaCble_Mejora, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+    </div>    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="IdCtaCble_Baja">Cuenta contable baja</label>
+                    @Html.Partial("_CmbCuenta_TipoAF6", Model)
+                    @Html.ValidationMessageFor(q => q.IdCtaCble_Baja, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+    </div>    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="IdCtaCble_Retiro">Cuenta contable retiro</label>
+                    @Html.Partial("_CmbCuenta_TipoAF7", Model)
+                    @Html.ValidationMessageFor(q => q.IdCtaCble_Retiro, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="box-footer">
         <button type="submit" class="btn btn-primary">Guardar</button>
