--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/TipoAF/_CmbCuenta_TipoAF6.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/TipoAF/_CmbCuenta_TipoAF6.cshtml
@@ -2,11 +2,11 @@
 @{
     var comboBox = Html.DevExpress().ComboBox(settings =>
     {
-        settings.Name = "IdCtaCble_Activo";
+        settings.Name = "IdCtaCble_Baja";
         settings.Width = Unit.Percentage(100);
         settings.Properties.DropDownWidth = Unit.Percentage(100);
         settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-        settings.CallbackRouteValues = new { Controller = "TipoAF", Action = "CmbCuenta_TipoAF", Area = "ActivoFijo" };
+        settings.CallbackRouteValues = new { Controller = "TipoAF", Action = "CmbCuenta_TipoAF6", Area = "ActivoFijo" };
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
         settings.Properties.TextField = "pc_Cuenta";
@@ -22,7 +22,7 @@
 
     })
     .BindList(new Core.Erp.Web.Areas.ActivoFijo.Controllers.TipoAFController().get_list_bajo_demanda, new Core.Erp.Web.Areas.ActivoFijo.Controllers.TipoAFController().get_info_bajo_demanda)
-    .Bind(Model);
+    .Bind(Model.IdCtaCble_Baja);
 
 
 }
