--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/TipoAF/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/TipoAF/Modificar.cshtml
@@ -62,24 +62,8 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdCtaCble_Activo">Cuenta contable activo*</label>
-                    @Html.DevExpress().ComboBoxFor(q => q.IdCtaCble_Activo, settings =>
-       {
-           settings.Name = "IdCtaCble_Activo";
-           settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-           settings.Properties.DisplayFormatString = "[{0}] - {1}";
-           settings.Properties.Columns.Add("IdCtaCble", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-           settings.Properties.Columns.Add("pc_Cuenta", "Cuenta").Width = System.Web.UI.WebControls.Unit.Percentage(50);
-           settings.Properties.Columns.Add("pc_Cuenta_padre", "Cuenta padre").Width = System.Web.UI.WebControls.Unit.Percentage(40);
-           //Campo ID
-           settings.Properties.ValueField = "IdCtaCble";
-           settings.Properties.ValueType = typeof(string);
-           settings.Properties.TextField = "pc_Cuenta";
-           //Boton para seleccionar ningun registro
-           settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
-           settings.Properties.NullText = "== Seleccione ==";
-           settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-       }).BindList(ViewBag.lst_cuentas).GetHtml()
+                    <label for="IdCtaCble_Activo">Cuenta contable activo</label>
+                    @Html.Partial("_CmbCuenta_TipoAF1", Model)
                     @Html.ValidationMessageFor(q => q.IdCtaCble_Activo, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -90,24 +74,8 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdCtaCble_Dep_Acum">Cuenta contable depreciación acumulada*</label>
-                    @Html.DevExpress().ComboBoxFor(q => q.IdCtaCble_Dep_Acum, settings =>
-       {
-           settings.Name = "IdCtaCble_Dep_Acum";
-           settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-           settings.Properties.DisplayFormatString = "[{0}] - {1}";
-           settings.Properties.Columns.Add("IdCtaCble", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-           settings.Properties.Columns.Add("pc_Cuenta", "Cuenta").Width = System.Web.UI.WebControls.Unit.Percentage(50);
-           settings.Properties.Columns.Add("pc_Cuenta_padre", "Cuenta padre").Width = System.Web.UI.WebControls.Unit.Percentage(40);
-           //Campo ID
-           settings.Properties.ValueField = "IdCtaCble";
-           settings.Properties.ValueType = typeof(string);
-           settings.Properties.TextField = "pc_Cuenta";
-           //Boton para seleccionar ningun registro
-           settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
-           settings.Properties.NullText = "== Seleccione ==";
-           settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-       }).BindList(ViewBag.lst_cuentas).GetHtml()
+                    <label for="IdCtaCble_Dep_Acum">Cuenta contable depreciación acumulada</label>
+                    @Html.Partial("_CmbCuenta_TipoAF2", Model)
                     @Html.ValidationMessageFor(q => q.IdCtaCble_Dep_Acum, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -118,25 +86,50 @@
         <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="IdCtaCble_Gastos_Depre">Cuenta contable gastos de depreciación*</label>
-                    @Html.DevExpress().ComboBoxFor(q => q.IdCtaCble_Gastos_Depre, settings =>
-       {
-           settings.Name = "IdCtaCble_Gastos_Depre";
-           settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-           settings.Properties.DisplayFormatString = "[{0}] - {1}";
-           settings.Properties.Columns.Add("IdCtaCble", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-           settings.Properties.Columns.Add("pc_Cuenta", "Cuenta").Width = System.Web.UI.WebControls.Unit.Percentage(50);
-           settings.Properties.Columns.Add("pc_Cuenta_padre", "Cuenta padre").Width = System.Web.UI.WebControls.Unit.Percentage(40);
-           //Campo ID
-           settings.Properties.ValueField = "IdCtaCble";
-           settings.Properties.ValueType = typeof(string);
-           settings.Properties.TextField = "pc_Cuenta";
-           //Boton para seleccionar ningun registro
-           settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
-           settings.Properties.NullText = "== Seleccione ==";
-           settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-       }).BindList(ViewBag.lst_cuentas).GetHtml()
+                    <label for="IdCtaCble_Gastos_Depre">Cuenta contable gastos de depreciación</label>
+                    @Html.Partial("_CmbCuenta_TipoAF3", Model)
                     @Html.ValidationMessageFor(q => q.IdCtaCble_Gastos_Depre, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="IdCtaCble_CostoVenta">Cuenta contable costo de venta</label>
+                    @Html.Partial("_CmbCuenta_TipoAF4", Model)
+                    @Html.ValidationMessageFor(q => q.IdCtaCble_CostoVenta, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+    </div>    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="IdCtaCble_Mejora">Cuenta contable mejora</label>
+                    @Html.Partial("_CmbCuenta_TipoAF5", Model)
+                    @Html.ValidationMessageFor(q => q.IdCtaCble_Mejora, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+    </div>    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="IdCtaCble_Baja">Cuenta contable baja</label>
+                    @Html.Partial("_CmbCuenta_TipoAF6", Model)
+                    @Html.ValidationMessageFor(q => q.IdCtaCble_Baja, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+    </div>    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="IdCtaCble_Retiro">Cuenta contable retiro</label>
+                    @Html.Partial("_CmbCuenta_TipoAF7", Model)
+                    @Html.ValidationMessageFor(q => q.IdCtaCble_Retiro, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
