--- a/ERP/Core.Erp.Web/Areas/Presupuesto/Views/GrupoPresupuesto/_CmbUsuario_Grupo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Presupuesto/Views/GrupoPresupuesto/_CmbUsuario_Grupo.cshtml
@@ -6,7 +6,7 @@
         settings.Width = Unit.Percentage(100);
         settings.Properties.DropDownWidth = Unit.Percentage(100);
         settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-        settings.CallbackRouteValues = new { Controller = "GrupoPresupuesto", Action = "CmbUsuario", Area = "Presupuesto" };
+        settings.CallbackRouteValues = new { Controller = "GrupoPresupuesto", Action = "CmbUsuario_Grupo", Area = "Presupuesto" };
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
         settings.Properties.TextField = "Nombre";
