--- a/ERP/Core.Erp.Web/Areas/Presupuesto/Views/GrupoPresupuesto/_GridViewPartial_GrupoDet.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Presupuesto/Views/GrupoPresupuesto/_GridViewPartial_GrupoDet.cshtml
@@ -65,6 +65,16 @@
                 ViewContext.Writer.Write("</div>");
             });
         });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "AsignaCuentas";
+            column.Caption = "Asigna Cuentas";
+            column.Width = Unit.Percentage(10);
+            column.EditorProperties().CheckBox(sp =>
+            {
+
+            });
+        });
 
         settings.ClientSideEvents.BeginCallback = "function(s,e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val();}";
     });
