--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/Nuevo.cshtml
@@ -11,6 +11,7 @@
 @using (Html.BeginForm("Nuevo", "ActivoFijo", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdEmpresa);
+    @Html.HiddenFor(q => q.IdTransaccionSession);
     @Html.HiddenFor(q => q.Estado_Proceso);
     <div class="row">
         <div class="col-md-12">
@@ -327,8 +328,15 @@
 
 
 
-                @Html.Action("GridViewPartial_activo_fijo_ctacble")
-
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                @Html.Action("GridViewPartial_activo_fijo_ctacble")
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
 
 
