--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/_GridViewPartial_activo_fijo_ctacble.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/_GridViewPartial_activo_fijo_ctacble.cshtml
@@ -1,28 +1,93 @@
+@using System.Web.UI.WebControls;
 @{
-	var grid = Html.DevExpress().GridView(settings => {
+    var grid = Html.DevExpress().GridView(settings =>
+    {
         settings.Name = "GridView_activo_fijo_ctacble";
         settings.CallbackRouteValues = new { Controller = "ActivoFijo", Action = "GridViewPartial_activo_fijo_ctacble" };
+        settings.KeyFieldName = "Secuencia";
+        settings.Width = Unit.Percentage(100);
 
+        settings.SettingsEditing.Mode = GridViewEditingMode.EditFormAndDisplayRow;
+        settings.SettingsEditing.AddNewRowRouteValues = new { Controller = "ActivoFijo", Action = "EditingAddNew", Area = "ActivoFijo" };
+        settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "ActivoFijo", Action = "EditingUpdate", Area = "ActivoFijo" };
+        settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "ActivoFijo", Action = "EditingUpdate", Area = "ActivoFijo" };
 
-		settings.KeyFieldName = "Secuencia";
+        settings.CommandColumn.Visible = true;
+        settings.CommandColumn.ShowNewButton = true;
+        settings.CommandColumn.ShowEditButton = true;
+        settings.CommandColumn.ShowDeleteButton = false;
 
-		settings.SettingsPager.Visible = true;
-		settings.Settings.ShowGroupPanel = true;
-		settings.Settings.ShowFilterRow = true;
-		settings.SettingsBehavior.AllowSelectByRowClick = true;
+        settings.SettingsContextMenu.Enabled = true;
+        settings.SettingsContextMenu.RowMenuItemVisibility.DeleteRow = false;
+        settings.SettingsBehavior.EnableCustomizationWindow = true;
 
-		settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.Off;
-		settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
-		settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
-		settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
-		settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 0;
+        settings.SettingsPager.Visible = true;
+        settings.Settings.ShowGroupPanel = false;
+        settings.SettingsBehavior.AllowSelectByRowClick = true;
 
-				settings.Columns.Add("IdEmpresa");
-				settings.Columns.Add("IdActivoFijo");
-				settings.Columns.Add("Secuencia");
-				settings.Columns.Add("IdCatalogo");
-				settings.Columns.Add("IdCtaCble");
-				settings.Columns.Add("Porcentaje");
-			});
+        //Configuracion responsive
+        settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
+        settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
+        settings.SettingsAdaptivity.AdaptiveDetailColumnCount = 1;
+        settings.SettingsAdaptivity.AllowOnlyOneAdaptiveDetailExpanded = false;
+        settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
+        settings.InitNewRow = (s, e) =>
+        {
+            e.NewValues["IdCatalogo"] = "";
+            e.NewValues["IdCtaCble"] = null;
+            e.NewValues["Porcentaje"] = 0;
+        };
+        settings.Columns.Add(column =>
+        {
+            column.Name = "IdCatalogo";
+            column.FieldName = "IdCatalogo";
+            column.Caption = "Tipo de cuenta*";
+            column.Width = Unit.Percentage(10);
+            column.EditFormSettings.Visible = DefaultBoolean.True;
+            column.EditorProperties().ComboBox(p =>
+            {
+                p.Columns.Add("Descripcion", "Descripción").Width = Unit.Percentage(100);
+                p.TextField = "Descripcion";
+                p.ValueField = "IdCatalogo";
+                p.ValueType = typeof(string);
+                p.DataSource = ViewBag.lst_catalogo;
+            });
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "pc_Cuenta";
+            column.Caption = "Cuenta contable";
+            column.Width = Unit.Percentage(10);
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+        });
+
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "IdCtaCble";
+            column.Caption = "ID";
+            column.Width = Unit.Percentage(30);
+            column.Visible = false;
+            column.EditFormSettings.Visible = DefaultBoolean.True;
+            column.SetEditItemTemplateContent(c =>
+            {
+                ViewContext.Writer.Write("<div id='ajaxDiv'>");
+                Html.RenderPartial("_CmbCuenta_AF", DataBinder.Eval(c.DataItem, "IdCtaCble"));
+                ViewContext.Writer.Write("</div>");
+            });
+        });
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "Porcentaje";
+            column.Caption = "% ";
+            column.Width = Unit.Percentage(10);
+            column.EditorProperties().SpinEdit(q =>
+            {
+                q.MinValue = 0;
+                q.Width = Unit.Percentage(100);
+            });
+            column.EditFormSettings.Visible = DefaultBoolean.True;
+        });
+
+    });
 }
 @grid.Bind(Model).GetHtml()
