--- a/ERP/Core.Erp.Web/Areas/Presupuesto/Views/GrupoPresupuesto/_GridViewPartial_GrupoDet.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Presupuesto/Views/GrupoPresupuesto/_GridViewPartial_GrupoDet.cshtml
@@ -41,6 +41,7 @@
         {
             e.NewValues["IdUsuario"] = "";
             e.NewValues["Nombre"] = "";
+            e.NewValues["AsignaCuentas"] = false;
         };
 
         settings.Columns.Add(column =>
